--- a/app/package.json
+++ b/app/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "test": "mocha --exit"
   },
   "dependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -13,6 +16,7 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "mocha": "^8.2.1",
     "nodemon": "^2.0.7"
   }
 }
